<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintEditTitle"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintEditDecription"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Spinner
        android:id="@+id/spinnerDayOfWeek"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/daysOfWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <RadioGroup
        android:id="@+id/radioGroupButtonsPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDayOfWeek">


        <RadioButton
            android:tag="1"
            android:id="@+id/radioButtonLowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/priority_1"
            android:padding="4dp"
            android:checked="true"
            android:onClick="onClickRb"
            android:text="@string/rbLowPriority" />

        <RadioButton
            android:tag="2"
            android:id="@+id/radioButtonMiddlePriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/priority_2"
            android:padding="4dp"
            android:onClick="onClickRb"
            android:text="@string/rbMiddlePriority" />

        <RadioButton
            android:tag="3"
            android:id="@+id/radioButtonHightPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/priority_3"
            android:padding="4dp"
            android:onClick="onClickRb"
            android:text="@string/rbHightPriority" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonAddNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddNotesText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickSaveAddNote"/>
</androidx.constraintlayout.widget.ConstraintLayout>